--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: templates/3-index.html:4 templates/4-index.html:5 templates/5-index.html:5
 msgid "home_title"
-msgstr "Bienvenue chez ALX"
+msgstr "Bienvenue chez Holberton"
 
 #: templates/3-index.html:7 templates/4-index.html:8 templates/5-index.html:8
 msgid "home_header"
